--- a/READme
+++ b/READme
@@ -1,4 +1,4 @@
 # Week1excel
 =============
 
-This repository is for excel project work in Data Science BootCamp.
+This repository is for excel project work in Data Science.
